# beacon

./: Cargo.toml  README.md  install.sh  lo1  setup.sh  test.sh  uninstall.sh
src/: debug.rs  executer.rs  functions.rs  lib.rs  main.rs
src/backend/: executer.rs  functions.rs  mod.rs  threads.rs
src/frontend/: app.rs  control.rs  mod.rs  ui.rs
src/types/: mod.rs
src/wifi/: dhcp_connection.rs  helper.rs  history.rs  mod.rs  wpa_supplicant.rs
