[package]
name = "beacon"
version = "0.1.0"
edition = "2024"

[dependencies]
dhcp4r = "0.2.3"
neli = "0.7.4"
nl80211 = "0.0.2"
rand = "0.10.0"
libc = "0.2.184"
socket2 = "0.6.3"
rtnetlink = "0.14"
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"                                 # For human-readable text
bincode = "1.0"                                    # For fast, small binary (better for Daemons)


[[bin]]
name = "beacond"
path = "src/bin/beacond.rs"

[[bin]]
name = "beacon"
path = "src/bin/beacon.rs"
